--- a/.env
+++ b/.env
@@ -18,4 +18,11 @@ REACT_APP_NODE_1=https://data-seed-prebsc-1-s1.binance.org:8545/
 REACT_APP_NODE_2=https://data-seed-prebsc-1-s1.binance.org:8545/
 REACT_APP_NODE_3=https://data-seed-prebsc-1-s1.binance.org:8545/
 
+
+REACT_APP_TOKEN_ADDRESS=0x65a3132c940f97D6D10E1B668bFdD82578138770
+REACT_APP_CHEF_ADDRESS=0xAaF1f11007987be5085afb1B5AD7A7aADd28d40F
+REACT_APP_USDT_ADDRESS="0x78867bbeef44f2326bf8ddd1941a4439382ef2a7"
+REACT_APP_WETH_ADDRESS="0xae13d989dac2f0debff460ac112a837c89baa7cd"
+REACT_APP_UNISWAP_ROUTER_ADDRESS=0x9Ac64Cc6e4415144C455BD8E4837Fea55603e5c3
+
 #------------------------------------------------------------------------
